# starfish_api_client

./: .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: DocumentationBuild.yml  PackagePublish.yml
docs/source/: client.rst  conf.py  index.rst
docs/source/_static/css/: custom.css
starfish_api/: __init__.py
starfish_api_client/: __init__.py  client.py
